--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,14 +8,12 @@
     <title>Carte de Voeux</title>
 </head>
 <body>
+    <div class="contenair">
+     
 
 
 
-
-
-
-
-    
+    </div>
     <script src="./js/script/js"></script>
 </body>
 </html>
