--- a/index.html
+++ b/index.html
@@ -8,12 +8,36 @@
     <title>Carte de Voeux</title>
 </head>
 <body>
-    <div class="contenair">
-     
+
+    <div id="contenair">
+
+        <svg id="halo">
+            <defs>
+              <radialGradient id="grad1" cx="50%" cy="50%" r="50%" fx="50%" fy="50%">
+                <stop id="centre" offset="0%" />
+                <stop  id="ext" offset="100%" />
+              </radialGradient>
+            </defs>
+            <circle cx="300" cy="300" r="250" fill="url(#grad1)" />
+          </svg> 
 
 
+        <div id="logoAformac">
+
+          <img id="logo" src="./img/logoAformac1.png" alt="logo Aformac">
+
+          <img id="groupe" src="./img/logoAformac2.png" alt="groupe">
+
+          <img id="aformac" src="./img/logoAformac3.png" alt="aformac">
+         
+        </div>
+
+        <div>
+            <img id="traineau" src="./img/traineau.png" alt="traineau">
+        </div>
 
     </div>
+   
     <script src="./js/script/js"></script>
 </body>
 </html>
