ajout texte souhait

--- a/index.html
+++ b/index.html
@@ -60,8 +60,11 @@
                 <div id="lettreA"><img class="images" src="./img/aBonnet.png" alt="lettreA"></div>
                 <!-- lettre c -->
                 <div id="lettreC"><img class="images" src="./img/c.png" alt="lettreC"></div>
-                <div id="chausette"><img class="images" src="./img/chaussettes-de-noel.png" alt="chausette"></div>
+                <div id="chausette"><img class="images chausette" src="./img/chaussettes-de-noel.png" alt="chausette"></div>
             </div>
+        </div>
+        <div id="souhait">
+            <marquee behavior="scroll" direction="left">Toute l'équipe et les apprenants du groupe AFORMAC vous souhaites de Joyeuses Fêtes !</marquee>
         </div>
     </div>
    
